--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=KinoXP
+
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/kinoxp
+spring.datasource.username=Cinema
+spring.datasource.password=Movie
+spring.jpa.hibernate.ddl-auto=update
