--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=KinoXP
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/kinoxp1
-spring.datasource.username=kinoxp12
+spring.datasource.username=root
 spring.datasource.password=1991
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+
 
